compiler/tests/en/errors/member_nonstruct.salam
// EXPECT: E029
func main:
    x : auto = 5
    x.field
end
